--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@types/googlemaps": "^3.38.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^1.9.1",
+    "ngx-webstorage-service": "^4.1.0",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
